# zds-2023-demo

./: west.yml
boards/xtensa/mimxrt595_evk/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  mimxrt595_evk_xtensa.dts  mimxrt595_evk_xtensa.yaml  mimxrt595_evk_xtensa_defconfig
boards/xtensa/mimxrt595_evk/doc/: index.rst
drivers/ipm/: ipm_imx.c
dts/arm/nxp/: nxp_rt5xx_common.dtsi
dts/bindings/cpu/: cdns,tensilica-xtensa-lx4.yaml
dts/xtensa/nxp/: nxp_rt5xx_dsp.dtsi
modules/: Kconfig.mcux
samples/boards/mimxrt595_evk_cm33/ipm/: Kconfig  app.overlay  sample.yaml
samples/boards/mimxrt595_evk_cm33/ipm/src/: main.c
samples/boards/mimxrt595_evk_xtensa/ipm/: CMakeLists.txt  Kconfig  README.rst  app.overlay  prj.conf  sample.yaml
samples/boards/mimxrt595_evk_xtensa/ipm/src/: main.c
soc/xtensa/nxp_fusion_dsp/: Kconfig  Kconfig.defconfig  Kconfig.soc
soc/xtensa/nxp_fusion_dsp/common/: CMakeLists.txt  mu.c  soc.c
soc/xtensa/nxp_fusion_dsp/common/include/: mu.h  mu_features.h  mu_map.h  soc.h
soc/xtensa/nxp_fusion_dsp/common/include/fusion_dsp/: cache.h  io.h
soc/xtensa/nxp_fusion_dsp/rt5xx/: Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  linker.ld
soc/xtensa/nxp_fusion_dsp/rt5xx/include/: xtensa-rt5xx.ld
zds_2023_demo/: dbus_mu_client.py  dbus_mu_service.py  gdb_cm33  gdb_qemu  gdb_xtensa  gdb_xtensa_machine  readme.md  zephyr.elf  zephyr_rt595_cm33_ipm.elf  zephyr_rt595_xtensa_interrupt.elf  zephyr_rt595_xtensa_ipm.elf
